# RP-2023

./: .buildinfo  README.html  README.md  _config.yml  _toc.yml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  pyproject.toml  search.html  searchindex.js
Chapter1/: Chapter1.html  Chapter1.md  NumPy.html  NumPy.ipynb  Pandas_and_Polars.html  Pandas_and_Polars.ipynb  Python.html
Chapter2/: Chapter2.html  Chapter2.md  GNN.html  GNN.ipynb  TabNet.html  TabNet.ipynb  WOE.html  XGBoost.html
Chapter3/: Calibration.html  Chapter3.html  Chapter3.md  Discrimination.html
Chapter4/: Chapter4.html  Chapter4.md  SHAP.html
Chapter5/: Chapter5.html  Fairness.html
_build/.doctrees/: Introduction.doctree  README.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree
_build/.doctrees/Chapter1/: Chapter1.doctree  NumPy.doctree  Pandas_and_Polars.doctree  Python.doctree
_build/.doctrees/Chapter2/: Chapter2.doctree  GNN.doctree  TabNet.doctree  WOE.doctree  XGBoost.doctree
_build/.doctrees/Chapter3/: Calibration.doctree  Chapter3.doctree  Discrimination.doctree
_build/.doctrees/Chapter4/: Chapter4.doctree  SHAP.doctree
_build/html/: .buildinfo  README.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  search.html  searchindex.js
_build/jupyter_execute/: markdown-notebooks.ipynb
_sources/Chapter2/: Chapter2.md  WOE.ipynb  XGBoost.ipynb
_sources/Chapter3/: Discrimination.ipynb
_sources/Chapter5/: Chapter5.md
_static/css/: static.css
(+35 files in other folders)
