[tool.poetry]
name = "risk-practitioner-ebook"
version = "0.1.0"
description = "A Jupyter book for risk practitioners"
authors = ["deburky <dennyemb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter-book = "^0.15.1"
scikit-learn = "1.3"
numpy = "^1.26.1"
pandas = "^2.1.2"
polars = "^0.19.12"
pyarrow = "^13.0.0"
pytorch-tabnet = "^4.1.0"
xgboost = "^2.0.1"
optbinning = "^0.18.0"
shap = "^0.43.0"
sphinx-inline-tabs = "^2023.4.21"
pydata-sphinx-theme = "^0.14.3"
lightgbm = "^4.1.0"
fairlearn = "^0.9.0"
xlrd = "^2.0.1"
networkx = "^3.2.1"
torch = "^2.1.0"
torch-geometric = "^2.4.0"
ruff = "^0.1.3"
nbqa = "^1.7.0"
jupyter-black = "^0.3.4"
isort = "^5.12.0"
autopep8 = "^2.0.4"
seaborn = "^0.13.0"
optuna = "^3.4.0"
ipympl = "^0.9.3"
tqdm = "^4.66.1"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
